# lab_manual

./: .gitignore  .nojekyll  _quarto.yml  index.html  index.qmd  pyproject.toml  references.bib  search.json
.github/workflows/: render.yml
_book/: index.html  search.json
_book/chapters/: 01-culture.html  02-policies.html  03-funding.html  04-data.html  05-computing.html  06-conferences.html  07-publications.html  08-code-review.html  09-code-workflow-agreements.html  10-pre-flight-checklist.html  99-references.html
chapters/: 01-culture.html  01-culture.qmd  02-policies.html  02-policies.qmd  03-funding.html  03-funding.qmd  04-data.html  04-data.qmd  05-computing.html  05-computing.qmd  06-conferences.html  06-conferences.qmd  07-publications.html  07-publications.qmd  08-code-review.html  08-code-review.qmd  09-code-workflow-agreements.html  09-code-workflow-agreements.qmd  10-pre-flight-checklist.html  10-pre-flight-checklist.qmd  10-tables-and-figures.qmd  99-references.html
lab-manual-draft/: 01-culture.Rmd  03-funding.Rmd  04-data.Rmd  07-publications.Rmd  README.md  _bookdown.yml  _output.yml  index.Rmd  lab-manual.Rmd  lab-manual.tex  packages.bib
lab-manual-draft/_book/: 404.html  computing-resources.html  conferences.html  data.html  funding.html  general-policies.html  index.html  lab-culture.html  publications.html  search_index.json
lab_manual-style_linking/: README.md
lab_manual-style_linking/chapters/: 03-funding.qmd  08-code-review.qmd  10-pre-flight-checklist.qmd
